default/objects/Mapping__c/fields/DisplayLabelField__c.field-meta.xml
<CustomField>
    <fullName>DisplayLabelField__c</fullName>
    <description>Fully qualified API name used as the display label</description>
    <label>Label Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>