default/objects/Mapping__c/fields/GroupResults__c.field-meta.xml
<CustomField>
    <fullName>GroupResults__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Group the records matching this mapping</description>
    <inlineHelpText>Records fetched for this mapping will be grouped together if they have the same label (used for row/column template)</inlineHelpText>
    <label>Group Results</label>
    <type>Checkbox</type>
</CustomField>