default/objects/Mapping__c/fields/ObjectType__c.field-meta.xml
<CustomField>
    <fullName>ObjectType__c</fullName>
    <description>Fully qualified object type name</description>
    <label>Object Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>