default/objects/Mapping__c/fields/ParentField__c.field-meta.xml
<CustomField>
    <fullName>ParentField__c</fullName>
    <label>Parent Relationship Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>