default/objects/Mapping__c/fields/ValueField__c.field-meta.xml
<CustomField>
    <fullName>ValueField__c</fullName>
    <description>Fully qualified API name of field to lookup for a value</description>
    <label>Value Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>